--- a/src/components/Reusable/index.css
+++ b/src/components/Reusable/index.css
@@ -68,22 +68,24 @@
   box-shadow: 0px 24px 42px 0px rgba(185, 185, 185, 0.25);
   backdrop-filter: blur(16px);
   width: 344px;
-  height: 164px;
+  height: 154px;
   z-index: 100000000000;
   position: absolute;
   bottom: 5%;
   left: 25%;
+  padding: 0 20px;
 }
 
 .aboutus__icon--bottom {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 10px;
+  gap: 15px;
 }
 
 /* TYPOGRAPHY */
-.aboutus__info span {
+.aboutus__info span,
+.purpose__headings p {
   display: flex;
   padding: 0px 12px;
   align-items: center;
@@ -100,14 +102,16 @@
   font-family: "Lato", sans-serif;
 }
 
-.aboutus__info h2 {
+.aboutus__info h2,
+.purpose__headings h2 {
   color: #181818;
   font-size: 30px;
   font-weight: 700;
   line-height: 40px;
 }
 
-.aboutus__info--bigpara {
+.aboutus__info--bigpara,
+.purpose__text--card h3 {
   color: #181818;
   font-family: "Lato", sans-serif;
   font-size: 18px;
@@ -116,7 +120,8 @@
   margin-top: 18px;
 }
 
-.aboutus__info--smallpara {
+.aboutus__info--smallpara,
+.purpose__text--card p{
   color: #595566;
   font-family: "Lato", sans-serif;
   font-size: 16px;
@@ -144,16 +149,21 @@
 .aboutus__icon--bottom--total {
   color: #151515;
 
-  font-size: 66px;
+  font-size: 18px;
   font-weight: 700;
-  line-height: 76.56px;
+  line-height: 20px;
+  margin-bottom: 10px;
 }
 
 .aboutus__icon--bottom--para {
   color: #181818;
   font-family: "Lato", sans-serif;
-  font-size: 20px;
+  font-size: 15px;
   font-weight: 500;
+}
+
+.aboutus__icon--bottom img {
+  width: 20%;
 }
 
 /* OUR SERVICES STYLING */
@@ -199,7 +209,8 @@
 
 /* TYPOGRAPHY */
 
-.ourservices__headings p {
+.ourservices__headings p,
+.joinus__heading--color {
   display: flex;
   padding: 0px 12px;
   align-items: center;
@@ -216,7 +227,8 @@
   font-family: "Lato", sans-serif;
 }
 
-.ourservices__headings h2 {
+.ourservices__headings h2,
+.joinus__heading h2 {
   color: #181818;
   text-align: center;
   font-size: 35px;
@@ -248,21 +260,95 @@
 }
 
 .ourindustries__card {
-    border-radius: 20px;
-    background: #ebebeb;
-    display: flex;
-    padding: 20px;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 10px;
-    transition: all ease-in-out 0.5s;
-    cursor: pointer;
-  }
-
+  border-radius: 20px;
+  background: #ebebeb;
+  display: flex;
+  padding: 20px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 10px;
+  transition: all ease-in-out 0.5s;
+  cursor: pointer;
+}
 
 .ourindustries__card img {
-    width: 15%;
+  width: 15%;
 }
+
+/* CAREER STYLING */
+.joinus__container {
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+}
+
+.joinus__heading h2 {
+  text-align: left;
+}
+
+.joinus__cards {
+  display: flex;
+  gap: 30px;
+}
+
+.joinus__card img {
+  border-radius: 5px;
+}
+
+/* TYPPGRAPHY */
+.joinus__card h3 {
+  margin: 20px 0;
+  font-size: 20px;
+  font-weight: 700;
+}
+
+.joinus__card p {
+  font-size: 15px;
+}
+
+/* PURPOSE STYLING */
+.purpose__container {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+
+.purpose__image,
+.purpose__text {
+  width: 50%;
+}
+
+
+.purpose__text,
+.purpose__text--cards {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+
+.purpose__text--card {
+  display: flex;
+  gap: 10px;
+}
+
+.purpose__icons {
+  font-size: 30px;
+}
+
+/* TYPOGRAPHY */
+.purpose__text--card h3 {
+  margin-top: 0;
+}
+
+.purpose__text--card p {
+  width: 70%;
+}
+
+/* .purpose__image img {
+  width: 90%;
+} */
+
+
 
 @media screen and (max-width: 680px) {
   .aboutus__container {
@@ -349,22 +435,88 @@
     font-size: 13px;
   }
 
-  .ourservices__headings h2 {
+  .joinus__heading--color,
+  .purpose__headings p {
+    font-size: 13px;
+  }
+
+  .ourservices__headings h2,
+  .joinus__heading h2,
+  .purpose__headings h2 {
     font-size: 25px;
     line-height: 32px;
   }
 
   /* INDUSTRIES STYLING */
-.ourindustries__cards {
+  .ourindustries__cards {
     grid-template-columns: 1fr;
     grid-template-rows: repeat(5, 1fr);
     grid-column-gap: 0px;
     grid-row-gap: 30px;
   }
-  
-  
+
   .ourindustries__card img {
-      width: 15%;
+    width: 15%;
+  }
+
+  .joinus__container {
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+  }
+
+  .joinus__heading h2 {
+    text-align: left;
+  }
+
+  .joinus__cards {
+    flex-direction: column;
+    gap: 30px;
+  }
+
+  /* TYPPGRAPHY */
+  .joinus__card h3 {
+    margin: 20px 0;
+    font-size: 17px;
+  }
+
+  .joinus__card p {
+    font-size: 15px;
+  }
+
+  /* PURPOSE STYLING */
+  .purpose__container {
+    flex-direction: column-reverse;
+    gap: 40px;
+  }
+  
+  .purpose__image,
+  .purpose__text {
+    width: 100%;
+  }
+  
+  
+  .purpose__text,
+  .purpose__text--cards {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+  }
+  
+  .purpose__text--card {
+    display: flex;
+    gap: 10px;
+  }
+  
+  .purpose__icons--big {
+    font-size: 55px;
+  }
+  
+  /* TYPOGRAPHY */
+ 
+  
+  .purpose__text--card p {
+    width: 100%;
   }
 }
 
@@ -465,6 +617,14 @@
   .ourindustries__cards {
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(3, 1fr);
+    grid-column-gap: 30px;
+    grid-row-gap: 30px;
+  }
+
+  .joinus__cards {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
     grid-column-gap: 30px;
     grid-row-gap: 30px;
   }
