--- a/src/index.css
+++ b/src/index.css
@@ -198,23 +198,10 @@ button {
   background: none;
 }
 
-.heading-primary {
-  font-size: 20px;
-  margin-bottom: 11px;
-  font-weight: 500;
-}
-
-.heading-secondary {
-  font-size: 23px;
-  font-weight: 500;
-}
-
-.loading {
-  width: 100vw;
-  height: 100vh;
-  display: grid;
-  place-items: center;
-  max-width: 100%;
+#shadow-host-companion {
+  overflow: hidden;
+  height: 0;
+  padding: 0;
 }
 
 @media screen and (max-width: 680px) {
