--- a/src/components/Reusable/index.css
+++ b/src/components/Reusable/index.css
@@ -121,7 +121,7 @@
 }
 
 .aboutus__info--smallpara,
-.purpose__text--card p{
+.purpose__text--card p {
   color: #595566;
   font-family: "Lato", sans-serif;
   font-size: 16px;
@@ -318,7 +318,6 @@
   width: 50%;
 }
 
-
 .purpose__text,
 .purpose__text--cards {
   display: flex;
@@ -348,7 +347,44 @@
   width: 90%;
 } */
 
+/* HOW TO JOIN STYLING */
+.howtojoin__container {
+  display: flex;
+  gap: 90px;
+}
 
+.howtojoin__box {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  width: 50%;
+}
+
+.howtojoin__box h2 {
+  margin: 20px 0;
+  font-size: 26px;
+  font-weight: 700;
+}
+
+.howtojoin__box p {
+  font-size: 17px;
+  line-height: 26px;
+}
+
+.howtojoin__box button {
+  display: flex;
+  padding: 14px 16px;
+  align-items: center;
+  gap: 10px;
+  border-radius: 20px;
+  background: #4eaf4e;
+  color: #fff;
+  width: fit-content;
+  font-size: 15px;
+  font-weight: 400;
+  margin-bottom: 22px;
+  font-family: "Lato", sans-serif;
+}
 
 @media screen and (max-width: 680px) {
   .aboutus__container {
@@ -489,35 +525,55 @@
     flex-direction: column-reverse;
     gap: 40px;
   }
-  
+
   .purpose__image,
   .purpose__text {
     width: 100%;
   }
-  
-  
+
   .purpose__text,
   .purpose__text--cards {
     display: flex;
     flex-direction: column;
     gap: 30px;
   }
-  
+
   .purpose__text--card {
     display: flex;
     gap: 10px;
   }
-  
+
   .purpose__icons--big {
     font-size: 55px;
   }
-  
+
   /* TYPOGRAPHY */
- 
-  
+
   .purpose__text--card p {
     width: 100%;
   }
+
+  /* HOW TO JOIN STYLING */
+  .howtojoin__container {
+    gap: 40px;
+    flex-direction: column;
+  }
+
+  /* 
+.howtojoin__box button {
+  display: flex;
+  padding: 14px 16px;
+  align-items: center;
+  gap: 10px;
+  border-radius: 20px;
+  background: #4eaf4e;
+  color: #fff;
+  width: fit-content;
+  font-size: 15px;
+  font-weight: 400;
+  margin-bottom: 22px;
+  font-family: "Lato", sans-serif;
+} */
 }
 
 @media screen and (max-width: 1300px) and (min-width: 681px) {
@@ -627,5 +683,11 @@
     grid-template-rows: repeat(2, 1fr);
     grid-column-gap: 30px;
     grid-row-gap: 30px;
+  }
+
+  /* HOW TO JOIN STYLING */
+  .howtojoin__container {
+    display: flex;
+    gap: 30px;
   }
 }
